Bug 72098 - [GM45 Regression]*ERROR* no BIOS fb, allocating a new one while boot system
Summary: [GM45 Regression]*ERROR* no BIOS fb, allocating a new one while boot system
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high major
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-28 05:31 UTC by lu hua
Modified: 2017-10-06 14:41 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (114.84 KB, text/plain)
2013-11-28 05:31 UTC, lu hua
no flags Details

Description lu hua 2013-11-28 05:31:48 UTC
Created attachment 89937 [details]
dmesg

System Environment:
--------------------------
Platform: GM45
Kernel: (drm-intel-nightly)957df0dde8c38e069aa3af5c8d402a53f42b56c9

Bug detailed description:
-----------------------------
Clean boot system, error appears in dmesg. It happens on gm45 with -queued and nightly kernel. It doesn't happen on -fixes kernel.
<3>[    2.144181] [drm:intelfb_create] *ERROR* no BIOS fb, allocating a new one.

The latest known good commit: b33ecdd1cdeb90ca07dd28d648558e87c8680443
The latest known bad commit: 8b4f49e03901e82898540bd1189333edf9588d74
Comment 1 Daniel Vetter 2013-11-28 13:55:42 UTC
commit 48e9212021d920fe91046ad078e1070524844059
Author: Jesse Barnes <jbarnes@virtuousgeek.org>
Date:   Tue Nov 26 11:25:54 2013 -0800

    drm/i915: drop DRM_ERROR in intel_fbdev init
Comment 2 lu hua 2013-12-20 07:42:24 UTC
Verified.Fixed.
Comment 3 Elizabeth 2017-10-06 14:41:53 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.